--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,11 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+img{
+  height: auto;
+  width: auto;
+  max-width: 500px;
+  max-height: 500px;
+}
